update: 配合調整並重構deeplink

--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -60,16 +60,22 @@
         <patch:attribute name="value" environment:require="Production">https://ibank.firstbank.com.tw/NetBank/6/040101.html?FundCode={}</patch:attribute>
       </setting>
       <!--基金申購-第e行動-->
-      <setting name="MobileESingle" value="https://fcblink.page.link/?link=https://fcblink.page.link/F01?FundCode%3D{}&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank" />
-      <setting name="MobileERegular" value="https://fcblink.page.link/?link=https://fcblink.page.link/F02?FundCode%3D{}&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank" />
+      <setting name="MobileESingle">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/mbank.html?go=F01?FundCode%3D{}&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/mbank.html?go=F01?FundCode%3D{}&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
+      </setting>
+      <setting name="MobileERegular">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/mbank.html?go=F02?FundCode%3D{}&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/mbank.html?go=F02?FundCode%3D{}&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
+      </setting>
       <!--基金申購-iLeo-->
       <setting name="MobileIleoSingle">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://fcbileodev.page.link/?link=https%3A%2F%2Ffcbileodev.page.link%2FFundSingle?FundCode%3D{}&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https%3A%2F%2Ffcbileo.page.link%2FFundSingle?FundCode%3D{}&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/ileo.html?go=FundSingle?FundCode%3D{}&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundSingle?FundCode%3D{}&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
       </setting>
       <setting name="MobileIleoRegular">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://fcbileodev.page.link/?link=https%3A%2F%2Ffcbileodev.page.link%2FFundRegular?FundCode%3D{}&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https%3A%2F%2Ffcbileo.page.link%2FFundRegular?FundCode%3D{}&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/ileo.html?go=FundRegular?FundCode%3D{}&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundRegular?FundCode%3D{}&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
       </setting>
       <!--ETF、國外股票申購-第e個網-->
       <setting name="WebEntrust">
@@ -77,11 +83,14 @@
         <patch:attribute name="value" environment:require="Production">https://ibank.firstbank.com.tw/NetBank/ETF/txnBuy-RWD.html?prdCode=代碼</patch:attribute>
       </setting>
       <!--ETF、國外股票申購-第e行動-->
-      <setting name="MobileEntrust" value="https://fcblink.page.link/?link=https%3A%2F%2Ffcblink.page.link%2FF18%3Fchn%3Dwms%26emp_id%3D%26prdCode%3D代碼&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank"/>
+      <setting name="MobileEntrust">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/mbank.html?go=F18%3Fchn%3Dwms%26emp_id%3D%26prdCode%3D代碼&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/mbank.html?go=F18%3Fchn%3Dwms%26emp_id%3D%26prdCode%3D代碼&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
+      </setting>
       <!--ETF、國外股票申購-iLeo-->
       <setting name="IleoEntrust">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://fcbileodev.page.link/?link=https%3A%2F%2Ffcbileodev.page.link%2FFundETFBuy%3FFundCode%3D代碼&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.DEV</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https%3A%2F%2Ffcbileo.page.link%2FFundETFBuy%3FFundCode%3D代碼&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/ileo.html?go=FundETFBuy%3FFundCode%3D代碼&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.DEV</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundETFBuy%3FFundCode%3D代碼&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
       </setting>
       <!--國外債卷-第e個網-->
       <setting name="WebBond">
@@ -89,11 +98,14 @@
         <patch:attribute name="value" environment:require="Production">https://ibank.firstbank.com.tw/NetBank/6/03010101_redirect.html</patch:attribute>
       </setting>
       <!--國外債卷申購-第e行動-->
-      <setting name="MobileBond" value="https://fcblink.page.link/?link=https://fcblink.page.link/F20"/>
+      <setting name="MobileBond">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/mbank.html?go=F20</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/mbank.html?go=F20</patch:attribute>
+      </setting>
       <!--國外債卷申購-iLeo-->
       <setting name="IleoBond">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://fcbileodev.page.link/?link=https%3A%2F%2Ffcbileodev.page.link%2FFundFrnBond&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.apnDEV</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https%3A%2F%2Ffcbileo.page.link%2FFundFrnBond&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/ileo.html?go=FundFrnBond&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.apnDEV</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundFrnBond&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
       </setting>
       <!--幣別iframe-->
       <setting name="CurrencyWebSite">
@@ -107,17 +119,18 @@
       </setting>
       <!--風險評估route 第e個網-->
       <setting name="WebKYC">
-        <patch:attribute name="value" environment:require="Staging">https://ibanktest.firstbank.com.tw/NetBank/goKYC.html</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://ibanktest.firstbank.com.tw/NetBank/goKYC.html</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://ibank.firstbank.com.tw/NetBank/goKYC.html</patch:attribute>
       </setting>
       <!--風險評估route 第e行動-->
       <setting name="FirsteKYC">
-        <patch:attribute name="value" environment:require="Staging or Production">https://fcblink.page.link/?link=https://fcblink.page.link/F14&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/mbank.html?go=F14&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/mbank.html?go=F14&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
       </setting>
       <!--風險評估route iLeo-->
       <setting name="IleoKYC">
-        <patch:attribute name="value" environment:require="Staging">https://fcbileodev.page.link/?link=https%3A%2F%2Ffcbileodev.page.link%2FFundKYC&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.apnDEV</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https%3A%2F%2Ffcbileo.page.link%2FFundKYC&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobile.firstbank.com.tw/ileo.html?go=FundKYC&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.apnDEV</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundKYC&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
       </setting>
       <!-- 預設新聞列表-Cache過期時間-->
       <setting name="DefaultNewsCacheTime" value="30m"/>
