--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -122,11 +122,13 @@
       <setting name="WebBank.CallBackUrl" value="/api/client/Accounts/SignInWebBank?sc_lang=zh-TW&amp;sc_site=wealth-zh-hant">
       </setting>
       <!--第e行動&&iLeo登入deeplink-->
-      <setting name="MobileFirste" value="https://fcblink.page.link/?link=https%3A%2F%2Ffcblink.page.link%2FI11%3Fchannel%3Dwms%26returnUrl%3Dwww.google.com.tw&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank">
+      <setting name="MobileFirste" >
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/mbank.html?go=I11%3Fchannel%3Dwms%26returnUrl%3Dwww.google.com.tw&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/mbank.html?go=I11%3Fchannel%3Dwms%26returnUrl%3Dwww.google.com.tw&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
       </setting>
       <setting name="MobileIleo">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://fcbileodev.page.link/?link=https://fcbileodev.page.link/FundTrackList?channel%3Dwms%26returnUrl%3D&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.apnDEV</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https://fcbileo.page.link/FundTrackList?channel%3Dwms%26returnUrl%3D&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/ileo.html?go=FundTrackList?channel%3Dwms%26returnUrl%3D&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.apnDEV</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundTrackList?channel%3Dwms%26returnUrl%3D&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
       </setting>
       <!--壓力測試使用 ID-->
       <setting name="StressTestId" value="A1231231230" />
