--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -21,9 +21,9 @@
         <patch:attribute name="hostName" environment:require="Local"></patch:attribute>
         <patch:attribute name="hostName" role:require="ContentManagement" environment:require="Development">fcbdev-cm.esi-tech.net|fcbdev811.esi-tech.net</patch:attribute>
         <patch:attribute name="hostName" role:require="ContentDelivery" environment:require="Development">fcb.cd|fcb.cd2|fcbdev.esi-tech.net</patch:attribute>
-        <patch:attribute name="hostName" role:require="ContentManagement" environment:require="Staging">weamg.firstbank-tt.com.tw</patch:attribute>
+        <patch:attribute name="hostName" role:require="ContentManagement" environment:require="Staging">weamg.firstbank-tt.com.tw|weamg.fcbsrv-tt.fcb.local </patch:attribute>
         <patch:attribute name="hostName" role:require="ContentDelivery" environment:require="Staging">weaap.fcbsrv-tt.fcb.local|wealth.firstbank-tt.com.tw</patch:attribute>
-        <patch:attribute name="hostName" role:require="ContentManagement" environment:require="Production">weamg.firstbank.com.tw</patch:attribute>
+        <patch:attribute name="hostName" role:require="ContentManagement" environment:require="Production">weamg.firstbank.com.tw|wearmg.fcbsrv.fcb.local</patch:attribute>
         <patch:attribute name="hostName" role:require="ContentDelivery" environment:require="Production">weaap1.fcbsrv.fcb.local|weaap2.fcbsrv.fcb.local|wealth.firstbank.com.tw</patch:attribute>
         <patch:attribute name="targetHostName" environment:require="Local"></patch:attribute>
         <patch:attribute name="targetHostName" role:require="ContentManagement" environment:require="Development">fcbdev-cm.esi-tech.net</patch:attribute>
@@ -137,7 +137,7 @@
       <setting name="BondSearchCacheTime" value="30m"/>
       <!-- 全站搜尋商品列表-Cache過期時間-->
       <setting name="SiteProductSearchCacheTime" value="30m"/>
-      
+
       <setting name="IMVPApiRoute">
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://ta-sfa01-ap.firstbank.com.tw:9444</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://pa-sfa01-ap:9444</patch:attribute>
