--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -2,6 +2,7 @@
   <sitecore role:require="Standalone or ContentManagement or ContentDelivery">
     <sc.variable name="demo.01" value="demo-zh-hant" patch:before="prototypes[1]" />
     <sc.variable name="wealth.01" value="wealth-zh-hant" patch:before="prototypes[1]" />
+    <sc.variable name="api" value="wealth-api" patch:before="prototypes[1]" />
     <sites>
       <site name="$(demo.01)" inherits="website" patch:before="site[@name='website']" environment:require="Development or Staging or Local">
         <patch:attribute name="virtualFolder">/demo</patch:attribute>
@@ -32,6 +33,18 @@
         <patch:attribute name="targetHostName" role:require="ContentDelivery" environment:require="Staging">wealth.firstbank-tt.com.tw</patch:attribute>
         <patch:attribute name="targetHostName" role:require="ContentManagement" environment:require="Production">weamg.firstbank.com.tw</patch:attribute>
         <patch:attribute name="targetHostName" role:require="ContentDelivery" environment:require="Production">wealth.firstbank.com.tw</patch:attribute>
+      </site>
+      <site name="$(api)" inherits="website" patch:before="site[@name='website']">
+        <patch:attribute name="physicalFolder">/</patch:attribute>
+        <patch:attribute name="rootPath">/sitecore/content</patch:attribute>
+        <patch:attribute name="startItem">/home</patch:attribute>
+        <patch:attribute name="language">zh-TW</patch:attribute>
+        <patch:attribute name="hostName" environment:require="Local">cms.cm-api</patch:attribute>
+        <patch:attribute name="hostName" environment:require="Development">fcbdev-api.esi-tech.net</patch:attribute>
+        <patch:attribute name="hostName" environment:require="Production">wealthapi.firstbank-tt.com.tw</patch:attribute>
+        <patch:attribute name="targetHostName" environment:require="Local">cms.cm-api</patch:attribute>
+        <patch:attribute name="targetHostName" environment:require="Development">fcbdev.esi-tech.net</patch:attribute>
+        <patch:attribute name="targetHostName" environment:require="Production">wealth.firstbank.com.tw</patch:attribute>
       </site>
     </sites>
     <settings>
