--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -199,6 +199,10 @@
         <patch:attribute name="value" environment:require="Local or Development or Staging">3f9f3b5d-7c4e-4af9-9e6a-9b3dbe12c4f6</patch:attribute>
         <patch:attribute name="value" environment:require="Production">3f9f3b5d-7c4e-4af9-9e6a-9b3dbe12c4f6</patch:attribute>
       </setting>
+      <setting name="ConsultUseTestEmail">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">1</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">0</patch:attribute>
+      </setting>
     </settings>
   </sitecore>
 </configuration>
