--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -39,10 +39,10 @@
         <patch:attribute name="rootPath">/sitecore/content</patch:attribute>
         <patch:attribute name="startItem">/home</patch:attribute>
         <patch:attribute name="language">zh-TW</patch:attribute>
-        <patch:attribute name="hostName" environment:require="Local">cms.cm-api</patch:attribute>
+        <patch:attribute name="hostName" environment:require="Local"></patch:attribute>
         <patch:attribute name="hostName" environment:require="Development">fcbdev-api.esi-tech.net</patch:attribute>
         <patch:attribute name="hostName" environment:require="Production">wealthapi.firstbank-tt.com.tw</patch:attribute>
-        <patch:attribute name="targetHostName" environment:require="Local">cms.cm-api</patch:attribute>
+        <patch:attribute name="targetHostName" environment:require="Local"></patch:attribute>
         <patch:attribute name="targetHostName" environment:require="Development">fcbdev.esi-tech.net</patch:attribute>
         <patch:attribute name="targetHostName" environment:require="Production">wealth.firstbank.com.tw</patch:attribute>
       </site>
