--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -74,21 +74,21 @@
       </setting>
       <!--基金申購-第e行動-->
       <setting name="MobileESingle">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/mbank.html?go=F01?FundCode%3D{}&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/mbank.html?go=F01?FundCode%3D{}&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/mbank.html?go=F01?FundCode%3D{}</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/mbank.html?go=F01?FundCode%3D{}</patch:attribute>
       </setting>
       <setting name="MobileERegular">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/mbank.html?go=F02?FundCode%3D{}&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/mbank.html?go=F02?FundCode%3D{}&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/mbank.html?go=F02?FundCode%3D{}</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/mbank.html?go=F02?FundCode%3D{}</patch:attribute>
       </setting>
       <!--基金申購-iLeo-->
       <setting name="MobileIleoSingle">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/ileo.html?go=FundSingle?FundCode%3D{}&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundSingle?FundCode%3D{}&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/ileo.html?go=FundSingle?FundCode%3D{}</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundSingle?FundCode%3D{}</patch:attribute>
       </setting>
       <setting name="MobileIleoRegular">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/ileo.html?go=FundRegular?FundCode%3D{}&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundRegular?FundCode%3D{}&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/ileo.html?go=FundRegular?FundCode%3D{}</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundRegular?FundCode%3D{}</patch:attribute>
       </setting>
       <!--ETF、國外股票申購-第e個網-->
       <setting name="WebEntrust">
@@ -97,13 +97,13 @@
       </setting>
       <!--ETF、國外股票申購-第e行動-->
       <setting name="MobileEntrust">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/mbank.html?go=F18%3Fchn%3Dwms%26emp_id%3D%26prdCode%3D代碼&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/mbank.html?go=F18%3Fchn%3Dwms%26emp_id%3D%26prdCode%3D代碼&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/mbank.html?go=F18%3Fchn%3Dwms%26emp_id%3D%26prdCode%3D代碼</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/mbank.html?go=F18%3Fchn%3Dwms%26emp_id%3D%26prdCode%3D代碼</patch:attribute>
       </setting>
       <!--ETF、國外股票申購-iLeo-->
       <setting name="IleoEntrust">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/ileo.html?go=FundETFBuy%3FFundCode%3D代碼&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.DEV</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundETFBuy%3FFundCode%3D代碼&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/ileo.html?go=FundETFBuy%3FFundCode%3D代碼</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundETFBuy%3FFundCode%3D代碼</patch:attribute>
       </setting>
       <!--國外債卷-第e個網-->
       <setting name="WebBond">
@@ -117,8 +117,8 @@
       </setting>
       <!--國外債卷申購-iLeo-->
       <setting name="IleoBond">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/ileo.html?go=FundFrnBond&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.apnDEV</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundFrnBond&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/ileo.html?go=FundFrnBond</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundFrnBond</patch:attribute>
       </setting>
       <!--幣別iframe-->
       <setting name="CurrencyWebSite">
@@ -137,13 +137,13 @@
       </setting>
       <!--風險評估route 第e行動-->
       <setting name="FirsteKYC">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/mbank.html?go=F14&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/mbank.html?go=F14&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/mbank.html?go=F14</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/mbank.html?go=F14</patch:attribute>
       </setting>
       <!--風險評估route iLeo-->
       <setting name="IleoKYC">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobile.firstbank.com.tw/ileo.html?go=FundKYC&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.apnDEV</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundKYC&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/ileo.html?go=FundKYC</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundKYC</patch:attribute>
       </setting>
       <!-- 預設新聞列表-Cache過期時間-->
       <setting name="DefaultNewsCacheTime" value="30m"/>
