新增api白名單IP

--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -165,8 +165,8 @@
       <setting name="SiteProductSearchCacheTime" value="30m"/>
 
       <setting name="ApiAllowedIps">
-        <patch:attribute name="value" environment:require="Local or Development or Staging"></patch:attribute>
-        <patch:attribute name="value" environment:require="Production"></patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">192.168.111.2,10.26.203.9,10.26.203.10,10.26.203.11</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">10.20.1.45,10.20.1.46,10.20.1.47,10.20.1.48</patch:attribute>
       </setting>
       <setting name="IMVPApiRoute">
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://ta-sfa01-ap.firstbank.com.tw:9444</patch:attribute>
