--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -123,12 +123,12 @@
       </setting>
       <!--第e行動&&iLeo登入deeplink-->
       <setting name="MobileFirste" >
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/mbank.html?go=I11%3Fchannel%3Dwms%26returnUrl%3Dwww.google.com.tw</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/mbank.html?go=I11%3Fchannel%3Dwms%26returnUrl%3Dwww.google.com.tw</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/files/redirect/mbank.html?go=I11%3Fchannel%3Dwms%26returnUrl%3Dwww.google.com.tw</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/files/redirect/mbank.html?go=I11%3Fchannel%3Dwms%26returnUrl%3Dwww.google.com.tw</patch:attribute>
       </setting>
       <setting name="MobileIleo">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/ileo.html?go=FundTrackList?channel%3Dwms%26returnUrl%3D</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/ileo.html?go=FundTrackList?channel%3Dwms%26returnUrl%3D</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/files/redirect/ileo.html?go=FundTrackList?channel%3Dwms%26returnUrl%3D</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mobile.firstbank.com.tw/files/redirect/ileo.html?go=FundTrackList?channel%3Dwms%26returnUrl%3D</patch:attribute>
       </setting>
       <!--壓力測試使用 ID-->
       <setting name="StressTestId" value="A1231231230" />
