update: 調整line行動版不自動登入

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -98,7 +98,7 @@
         <patch:attribute name="value" environment:require="Staging">e4aa6c7dd4d61c3c1dcc3cfa65231637</patch:attribute>
         <patch:attribute name="value" environment:require="Production">b5ee994321512fa6dcf85fa8055f9e2c</patch:attribute>
       </setting>
-      <setting name="Line.AuthUrl" value="https://access.line.me/oauth2/v2.1/authorize?scope={scope}&amp;response_type=code&amp;state={state}&amp;redirect_uri={RedirectUrl}&amp;client_id={clientid}&amp;max_age=5" />
+      <setting name="Line.AuthUrl" value="https://access.line.me/oauth2/v2.1/authorize?scope={scope}&amp;response_type=code&amp;state={state}&amp;redirect_uri={RedirectUrl}&amp;client_id={clientid}&amp;max_age=5&amp;disable_auto_login=true" />
       <setting name="Line.TokenUrl" value="https://api.line.me/oauth2/v2.1/token" />
       <setting name="Line.ProfileUrl" value="https://api.line.me/v2/profile" />
       <setting name="Line.VerifyUrl" value="https://api.line.me/oauth2/v2.1/verify" />
