--- a/src/Feature/ScheduleAgent/platform/App_Config/Include/Feature/Feature.Wealth.ScheduleAgent/Feature.Wealth.ScheduleAgent.config
+++ b/src/Feature/ScheduleAgent/platform/App_Config/Include/Feature/Feature.Wealth.ScheduleAgent/Feature.Wealth.ScheduleAgent.config
@@ -4,7 +4,7 @@
       <setting name="Feature.Wealth.ScheduleAgent.FeatureToggle.Ftp" value="true" />
       <setting name="Feature.Wealth.ScheduleAgent.FeatureToggle.Sftp" value="false" />
       <setting name="Feature.Wealth.ScheduleAgent.FeatureToggle.Db" value="false" />
-      <setting name="CDHostName" role:require="ContentManagement">
+      <setting name="CDHostName">
         <patch:attribute name="value" environment:require="Local or Development">fcbdev.esi-tech.net</patch:attribute>
         <patch:attribute name="value" environment:require="Staging">wealth.firstbank-tt.com.tw</patch:attribute>
         <patch:attribute name="value" environment:require="Production">wealth.firstbank.com.tw</patch:attribute>
