--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -24,7 +24,7 @@
         <patch:attribute name="hostName" role:require="ContentDelivery" environment:require="Development">fcb.cd|fcb.cd2|fcbdev.esi-tech.net</patch:attribute>
         <patch:attribute name="hostName" role:require="ContentManagement" environment:require="Staging">weamg.firstbank-tt.com.tw|weamg.fcbsrv-tt.fcb.local </patch:attribute>
         <patch:attribute name="hostName" role:require="ContentDelivery" environment:require="Staging">weaap.fcbsrv-tt.fcb.local|wealth.firstbank-tt.com.tw</patch:attribute>
-        <patch:attribute name="hostName" role:require="ContentManagement" environment:require="Production">weamg.firstbank.com.tw|wearmg.fcbsrv.fcb.local</patch:attribute>
+        <patch:attribute name="hostName" role:require="ContentManagement" environment:require="Production">weamg.firstbank.com.tw|weamg.fcbsrv.fcb.local</patch:attribute>
         <patch:attribute name="hostName" role:require="ContentDelivery" environment:require="Production">weaap1.fcbsrv.fcb.local|weaap2.fcbsrv.fcb.local|wealth.firstbank.com.tw</patch:attribute>
         <patch:attribute name="targetHostName" environment:require="Local"></patch:attribute>
         <patch:attribute name="targetHostName" role:require="ContentManagement" environment:require="Development">fcbdev-cm.esi-tech.net</patch:attribute>
