--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -44,7 +44,7 @@
         <patch:attribute name="hostName" environment:require="Production">wealthapi.firstbank.com.tw</patch:attribute>
         <patch:attribute name="targetHostName" environment:require="Local"></patch:attribute>
         <patch:attribute name="targetHostName" environment:require="Development">fcbdev-api.esi-tech.net</patch:attribute>
-        <patch:attribute name="targetHostName" environment:require="Production">wealthapi.firstbank.com.tw</patch:attribute>
+        <patch:attribute name="targetHostName" environment:require="Production">wealth.firstbank.com.tw</patch:attribute>
       </site>
     </sites>
     <settings>
