增加可停用log sitecore後臺欄位

--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -41,12 +41,11 @@
         <patch:attribute name="language">zh-TW</patch:attribute>
         <patch:attribute name="hostName" environment:require="Local"></patch:attribute>
         <patch:attribute name="hostName" environment:require="Development">fcbdev-api.esi-tech.net</patch:attribute>
-        <patch:attribute name="hostName" environment:require="Production">wealthapi.firstbank.com.tw</patch:attribute>
+        <patch:attribute name="hostName" environment:require="Production">wealthapi.firstbank-tt.com.tw</patch:attribute>
         <patch:attribute name="targetHostName" environment:require="Local"></patch:attribute>
-        <patch:attribute name="targetHostName" environment:require="Development">fcbdev-api.esi-tech.net</patch:attribute>
+        <patch:attribute name="targetHostName" environment:require="Development">fcbdev.esi-tech.net</patch:attribute>
         <patch:attribute name="targetHostName" environment:require="Production">wealth.firstbank.com.tw</patch:attribute>
       </site>
-    </sites>
     <settings>
       <!--排程Sitecron資料擷取下來路徑-->
       <setting name="LocalDirectory" role:require="ContentManagement">
