--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -46,6 +46,7 @@
         <patch:attribute name="targetHostName" environment:require="Development">fcbdev.esi-tech.net</patch:attribute>
         <patch:attribute name="targetHostName" environment:require="Production">wealth.firstbank.com.tw</patch:attribute>
       </site>
+    </sites>
     <settings>
       <!--排程Sitecron資料擷取下來路徑-->
       <setting name="LocalDirectory" role:require="ContentManagement">
