--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -200,6 +200,18 @@
         <patch:attribute name="value" environment:require="Local or Development or Staging">1003,1004,1005,1006,1007</patch:attribute>
         <patch:attribute name="value" environment:require="Production">1003,1004,1005,1006,1007</patch:attribute>
       </setting>
+      <setting name="OctoniConsoleApiRoute">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://weacon.firstbank-tt.com.tw:8443</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://weacon.firstbank.com.tw:8443</patch:attribute>
+      </setting>
+      <setting name="OctoniConsoleApiSysCode">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">OCTON</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">OCTON</patch:attribute>
+      </setting>
+      <setting name="OctoniConsoleApiDomain">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">MMCC</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">MMCC</patch:attribute>
+      </setting>
       <setting name="JwtIssuer">
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://wealth.firstbank-tt.com.tw</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://wealth.firstbank.com.tw</patch:attribute>
