#5306  Config調整 - Sitecore.Tasks.PublishAgent

--- a/src/Foundation/Wealth/platform/App_Config/Include/Foundation/Foundation.Wealth/Foundation.Wealth.config
+++ b/src/Foundation/Wealth/platform/App_Config/Include/Foundation/Foundation.Wealth/Foundation.Wealth.config
@@ -1,8 +1,12 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:environment="http://www.sitecore.net/xmlconfig/environment/">
   <sitecore>
     <scheduling>
-      <agent name="Sitecore.Tasks.PublishAgent" role:require="ContentManagement" environment:require="Staging or Production">
+      <agent role:require="ContentManagement" environment:require="Staging or Production" patch:instead="agent[@type='Sitecore.Tasks.PublishAgent']">
+        <patch:attribute name="type">Sitecore.Tasks.PublishAgent</patch:attribute>
+        <patch:attribute name="method">Run</patch:attribute>
         <patch:attribute name="interval">01:00:00</patch:attribute>
+        <param desc="source database">master</param>
+        <param desc="target database">web</param>
         <param desc="mode (full or smart or incremental)">smart</param>
         <param desc="languages">en, zh-TW</param>
       </agent>
